--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.0.2",
     "angular2-uuid": "^1.1.1",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
